# nav-property-compiler

./: .replit  DEPLOY.md  main.py  pyproject.toml  replit.md  requirements.txt
.agents/memory/: MEMORY.md  nix-streamlit-conflict.md  (+3 more)
.streamlit/: config.toml  secrets.toml.example
NAV-Property-Compiler/: .gitignore  pyproject.toml
NAV-Property-Compiler/src/nav_property_compiler/: __init__.py  main.py
NAV-Property-Compiler/tests/: test_main.py
attached_assets/: Pasted-ImportError-IMPORTANT-PLEASE-READ-THIS-FOR-ADVICE-ON-HO_1779230821945.txt  Pasted-Let-s-apply-a-final-precise-styling-and-layout-sweep-to_1780888022912.txt  Pasted-Let-s-apply-our-final-precision-optimization-and-copywr_1780890706020.txt  Pasted-Let-s-completely-re-architect-the-user-interface-layout_1780866404228.txt  Pasted-Let-s-fix-the-interface-friction-in-our-main-py-applica_1781134578283.txt  Pasted-Let-s-overhaul-our-HTML-generation-architecture-inside-_1781062161107.txt  Pasted-Let-s-rewrite-main-py-to-combine-our-active-Cloudflare-_1780880695310.txt  Pasted-Let-s-upgrade-Ivan-s-core-writing-intelligence-engine-a_1781036547709.txt  Pasted-Let-s-upgrade-main-py-to-transition-our-generator-into-_1780930178316.txt  Pasted-Let-s-upgrade-our-core-compiler-logic-inside-main-py-to_1781051103486.txt  Pasted-Please-modify-our-main-application-file-at-NAV-Property_1781133501097.txt  Pasted-Please-modify-our-main-py-application-file-to-ensure-we_1781135614745.txt  Pasted-def-for-sale-html-prefix-str-data-dict-studeo-url-str-s_1781538068881.txt
backend/: main.py
scripts/: post-merge.sh
(+1 files in other folders)
